docs-archive/apache-airflow-providers-google/19.2.0/_sources/_api/tests/system/google/cloud/gcs/example_sheets_to_gcs/index.rst.txt
tests.system.google.cloud.gcs.example_sheets_to_gcs
===================================================

.. py:module:: tests.system.google.cloud.gcs.example_sheets_to_gcs


Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.gcs.example_sheets_to_gcs.ENV_ID
   tests.system.google.cloud.gcs.example_sheets_to_gcs.PROJECT_ID
   tests.system.google.cloud.gcs.example_sheets_to_gcs.DAG_ID
   tests.system.google.cloud.gcs.example_sheets_to_gcs.IS_COMPOSER
   tests.system.google.cloud.gcs.example_sheets_to_gcs.BUCKET_NAME
   tests.system.google.cloud.gcs.example_sheets_to_gcs.SPREADSHEET
   tests.system.google.cloud.gcs.example_sheets_to_gcs.CONNECTION_ID
   tests.system.google.cloud.gcs.example_sheets_to_gcs.log
   tests.system.google.cloud.gcs.example_sheets_to_gcs.create_bucket
   tests.system.google.cloud.gcs.example_sheets_to_gcs.test_run


Module Contents
---------------

.. py:data:: ENV_ID

.. py:data:: PROJECT_ID

.. py:data:: DAG_ID
   :value: 'sheets_to_gcs'


.. py:data:: IS_COMPOSER

.. py:data:: BUCKET_NAME
   :value: 'bucket_sheets_to_gcs_Uninferable'


.. py:data:: SPREADSHEET

.. py:data:: CONNECTION_ID
   :value: 'connection_sheets_to_gcs_Uninferable'


.. py:data:: log

.. py:data:: create_bucket

.. py:data:: test_run

